* As briefly discussed in ticket #2024, I've changed BFS to allow to mount   volumes with a broken log. It will only allow the volume read-only then,   though (unlike Be's BFS), as your disk could be corrupt. * Added InitCheck() method to the RecursiveLock class, and now only check   this one in Journal::InitCheck() instead of also replaying the log there;   this is now done directly in Volume::Mount().

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@24795 a95241bf-73f2-0310-859d-f6bbb57e9c96